# Movie-bot

./: .replit  ADMIN_COPY_GUIDE.txt  AUTO_FILTER_SYSTEM_EXPLAINED.md  COMPLETE_BOT_STRUCTURE.md  admin_chat_system.py  admin_panel.py  auto_filter_bot.py  bot_blueprint_generator.py  bot_handlers.py  bot_structure_viewer.py  bulk_upload_handler.py  config.py  database.py  file_manager.py  main.py  main_auto_filter.py  models.py  movie_bot.db  pyproject.toml  requirements.txt  url_shortener.py  utils.py  verification_system.py
