[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "fuzzywuzzy>=0.18.0",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.27.1",
    "python-telegram-bot[job-queue]>=22.1",
    "sqlalchemy>=2.0.41",
    "telegram>=0.0.1",
]
